--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGODB_URI=mongodb+srv://sksarukali:KRet1aKFEBLDDiwU@cluster0.i4aiegf.mongodb.net/mylisting
+BASE_URL=http://localhost:4000
