--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "fs-extra": "^11.2.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.9.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5"
   }
 }
