--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "exifr": "^7.1.3",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "fs-extra": "^11.2.0",
